; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_biw_msa.c_hevc_hv_biwgt_4t_8w_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_biw_msa.c_hevc_hv_biwgt_4t_8w_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*, i32, i32*, i32*, i32, i32, i32, i32, i32, i32)* @hevc_hv_biwgt_4t_8w_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hevc_hv_biwgt_4t_8w_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4, i32 %5, i32* %6, i32* %7, i32 %8, i32 %9, i32 %10, i32 %11, i32 %12, i32 %13) #0 {
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32*, align 8
  %20 = alloca i32, align 4
  %21 = alloca i32*, align 8
  %22 = alloca i32*, align 8
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32, align 4
  %28 = alloca i32, align 4
  store i32* %0, i32** %15, align 8
  store i32 %1, i32* %16, align 4
  store i32* %2, i32** %17, align 8
  store i32 %3, i32* %18, align 4
  store i32* %4, i32** %19, align 8
  store i32 %5, i32* %20, align 4
  store i32* %6, i32** %21, align 8
  store i32* %7, i32** %22, align 8
  store i32 %8, i32* %23, align 4
  store i32 %9, i32* %24, align 4
  store i32 %10, i32* %25, align 4
  store i32 %11, i32* %26, align 4
  store i32 %12, i32* %27, align 4
  store i32 %13, i32* %28, align 4
  %29 = load i32, i32* %23, align 4
  %30 = icmp eq i32 2, %29
  br i1 %30, label %31, label %46

31:                                               ; preds = %14
  %32 = load i32*, i32** %15, align 8
  %33 = load i32, i32* %16, align 4
  %34 = load i32*, i32** %17, align 8
  %35 = load i32, i32* %18, align 4
  %36 = load i32*, i32** %19, align 8
  %37 = load i32, i32* %20, align 4
  %38 = load i32*, i32** %21, align 8
  %39 = load i32*, i32** %22, align 8
  %40 = load i32, i32* %24, align 4
  %41 = load i32, i32* %25, align 4
  %42 = load i32, i32* %26, align 4
  %43 = load i32, i32* %27, align 4
  %44 = load i32, i32* %28, align 4
  %45 = call i32 @hevc_hv_biwgt_4t_8x2_msa(i32* %32, i32 %33, i32* %34, i32 %35, i32* %36, i32 %37, i32* %38, i32* %39, i32 %40, i32 %41, i32 %42, i32 %43, i32 %44)
  br label %105

46:                                               ; preds = %14
  %47 = load i32, i32* %23, align 4
  %48 = icmp eq i32 4, %47
  br i1 %48, label %49, label %64

49:                                               ; preds = %46
  %50 = load i32*, i32** %15, align 8
  %51 = load i32, i32* %16, align 4
  %52 = load i32*, i32** %17, align 8
  %53 = load i32, i32* %18, align 4
  %54 = load i32*, i32** %19, align 8
  %55 = load i32, i32* %20, align 4
  %56 = load i32*, i32** %21, align 8
  %57 = load i32*, i32** %22, align 8
  %58 = load i32, i32* %24, align 4
  %59 = load i32, i32* %25, align 4
  %60 = load i32, i32* %26, align 4
  %61 = load i32, i32* %27, align 4
  %62 = load i32, i32* %28, align 4
  %63 = call i32 @hevc_hv_biwgt_4t_8multx4_msa(i32* %50, i32 %51, i32* %52, i32 %53, i32* %54, i32 %55, i32* %56, i32* %57, i32 %58, i32 %59, i32 %60, i32 %61, i32 %62, i32 1)
  br label %104

64:                                               ; preds = %46
  %65 = load i32, i32* %23, align 4
  %66 = icmp eq i32 6, %65
  br i1 %66, label %67, label %82

67:                                               ; preds = %64
  %68 = load i32*, i32** %15, align 8
  %69 = load i32, i32* %16, align 4
  %70 = load i32*, i32** %17, align 8
  %71 = load i32, i32* %18, align 4
  %72 = load i32*, i32** %19, align 8
  %73 = load i32, i32* %20, align 4
  %74 = load i32*, i32** %21, align 8
  %75 = load i32*, i32** %22, align 8
  %76 = load i32, i32* %24, align 4
  %77 = load i32, i32* %25, align 4
  %78 = load i32, i32* %26, align 4
  %79 = load i32, i32* %27, align 4
  %80 = load i32, i32* %28, align 4
  %81 = call i32 @hevc_hv_biwgt_4t_8x6_msa(i32* %68, i32 %69, i32* %70, i32 %71, i32* %72, i32 %73, i32* %74, i32* %75, i32 %76, i32 %77, i32 %78, i32 %79, i32 %80)
  br label %103

82:                                               ; preds = %64
  %83 = load i32, i32* %23, align 4
  %84 = srem i32 %83, 4
  %85 = icmp eq i32 0, %84
  br i1 %85, label %86, label %102

86:                                               ; preds = %82
  %87 = load i32*, i32** %15, align 8
  %88 = load i32, i32* %16, align 4
  %89 = load i32*, i32** %17, align 8
  %90 = load i32, i32* %18, align 4
  %91 = load i32*, i32** %19, align 8
  %92 = load i32, i32* %20, align 4
  %93 = load i32*, i32** %21, align 8
  %94 = load i32*, i32** %22, align 8
  %95 = load i32, i32* %23, align 4
  %96 = load i32, i32* %24, align 4
  %97 = load i32, i32* %25, align 4
  %98 = load i32, i32* %26, align 4
  %99 = load i32, i32* %27, align 4
  %100 = load i32, i32* %28, align 4
  %101 = call i32 @hevc_hv_biwgt_4t_8multx4mult_msa(i32* %87, i32 %88, i32* %89, i32 %90, i32* %91, i32 %92, i32* %93, i32* %94, i32 %95, i32 %96, i32 %97, i32 %98, i32 %99, i32 %100, i32 8)
  br label %102

102:                                              ; preds = %86, %82
  br label %103

103:                                              ; preds = %102, %67
  br label %104

104:                                              ; preds = %103, %49
  br label %105

105:                                              ; preds = %104, %31
  ret void
}

declare dso_local i32 @hevc_hv_biwgt_4t_8x2_msa(i32*, i32, i32*, i32, i32*, i32, i32*, i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @hevc_hv_biwgt_4t_8multx4_msa(i32*, i32, i32*, i32, i32*, i32, i32*, i32*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @hevc_hv_biwgt_4t_8x6_msa(i32*, i32, i32*, i32, i32*, i32, i32*, i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @hevc_hv_biwgt_4t_8multx4mult_msa(i32*, i32, i32*, i32, i32*, i32, i32*, i32*, i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
